@@ -139,7 +139,7 @@ config FREETZ_BUSYBOX_LONG_OPTS
 config FREETZ_BUSYBOX_MD5SUM
 	bool "md5sum"
 	depends on FREETZ_REPLACE_BUSYBOX
-	default n
+	default y
 	help
 		Includes the 'md5sum' tool in busybox
 
