@@ -16,8 +16,8 @@ $(KERNEL_TOOLCHAIN_STAGING_DIR):
 	@mkdir -p $@/$(REAL_GNU_KERNEL_NAME)
 	@ln -snf ../lib $@/$(REAL_GNU_KERNEL_NAME)/lib
 
-kernel-toolchain: $(KERNEL_TOOLCHAIN_DIR) $(KERNEL_TOOLCHAIN_STAGING_DIR) $(KERNEL_TOOLCHAIN_SYMLINK) \
-		$(KERNEL_TOOLCHAIN)
+kernel-toolchain: $(KERNEL_TOOLCHAIN_DIR) $(KERNEL_TOOLCHAIN_STAGING_DIR) \
+			$(KERNEL_TOOLCHAIN_SYMLINK_DOT_FILE) $(KERNEL_TOOLCHAIN)
 
 kernel-toolchain-source: $(KERNEL_TOOLCHAIN_DIR) \
 	$(BINUTILS_KERNEL_DIR)/.unpacked \
