@@ -47,6 +47,7 @@ Latest changes:
     * remove umts-support
     * add 3rd alarm-clock (for 7150  7112 7141 7170  3070_V3  3270 7240 7270 7270_V3)
     * freetzmount (by herman)
+    * reg SIP from outside (by MaxMuster)
 
 - New packages, libs, modules:
     * aiccu 20070115
